[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-explain"
version = "1.0.0"
description = "Explain any code snippet in plain language using Claude AI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]
keywords = ["claude", "ai", "code", "explainer", "cli", "anthropic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
claude-explain = "claude_explain.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/claude-explain"
Issues = "https://github.com/your-username/claude-explain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_explain*"]
